chunck and dependiencies removed